# SRE-ENV

./: .gitignore  Dockerfile  README.md  baseline.py  client.py  inference.py  models.py  openenv.yaml  pyproject.toml
server/: app.py  environment.py  grader.py  incidents.py  requirements.txt
